<resources>
    <string name="app_name">Заметки</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_text_button">Избранное</string>
    <string name="undo_text_button">Отменить</string>
    <string name="save_text_button">Готово</string>
    <string name="text_start_screen">Заметки 1.0</string>
    <string name="filter_text_main">Категории заметок</string>
    <string name="search_hint">Поиск…</string>
    <string name="category_button_text">Категории</string>
    <string name="edit_popup">Редактировать</string>
    <string name="to_favorite_popup">В избранное</string>
    <string name="delete_popup">Удалить</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="exit">Выход</string>
    <string name="drawer_header">Заметки 1.0</string>
    <string name="email">ndedov@gmail.com</string>
    <string name="navigation_drawer_open">Открыто</string>
    <string name="navigation_drawer_close">Закрыто</string>
    <string name="all_rights_reserved_2022_c">Все права защищены ©</string>
    <string name="save">Сохранить</string>
    <string name="redo">Повторить</string>
    <string name="undo">Отменить</string>
    <string name="back">Назад</string>
    <string name="delete_text_button">Удалить</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="note_text_hint">Текст…</string>
    <string name="note_title_hint">Название…</string>
    <string name="attention">Внимание</string>
    <string name="exit_question">Выйти без сохранения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="yes_save">Сохранить</string>
    <string name="no_save">Выход</string>
    <string name="delete_note_question">Удалить заметку?</string>
    <string name="yes_delete">Удалить</string>
    <string name="no_delete">Назад</string>
    <string name="toast_note_delete">Заметка удалена</string>
    <string name="save_ok">Сохранено</string>
    <string name="press_again_to_exit">Нажмите еще раз для выхода</string>
    <string name="text_continue_start_screen">Нажмите для продолжения…</string>
    <string name="night_theme_text">Ночная тема</string>
    <string name="language_text">Язык приложения</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="settings_text">Настройки</string>
    <string name="share_text_button">Поделиться</string>
    <string name="share_message">Поделиться используя…</string>
    <string name="message_empty_list">Список пуст…</string>
    <string name="message_nothing_to_share">Поделиться нечем…</string>

</resources>