<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/titleTextView"
                style="@style/TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/dateTimeView"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="DateTime"
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/note_norm_margin"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/textView"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/favoriteButton"
            style="@style/ButtonHorizontalNoteStyle"
            android:text="@string/favorite_text_button"

            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonHorizontalNoteStyle"

            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/undoButton"
            style="@style/ButtonHorizontalNoteStyle"
            android:textSize="@dimen/note_button_text_size"
            android:text="@string/undo_text_button"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:text="@string/save_text_button"

            style="@style/ButtonHorizontalNoteStyle"

            android:layout_weight="1"/>


    </LinearLayout>
</LinearLayout>